--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@
 }
 
 body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
     font-family: 'Karla', sans-serif;
     background-color: hwb(220 89% 4%);
 }
@@ -19,8 +23,8 @@ body {
 .container {
     display: flex;
     flex-direction: column;
-    margin: 80px auto;
     justify-content: center;
+    margin: 0 auto;
 }
 
 header {
